--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="address">
         <h4>მისამართი</h4>
-        <p>მერაბ ალექსიძის ქუჩა 10. თბილისი</p>
+        <p>მერაბ ალექსიძის ქუჩა 10, თბილისი</p>
       </div>
       <div class="fc-ig">
         <a href="index.html"><img src="src/images/facebook (2).png" alt=""></a>
